--- a/pkg.toml
+++ b/pkg.toml
@@ -2,20 +2,9 @@
 tool = "uv"
 
 [hooks.build]
-pre = ["echo 'Starting build...'"]
-post = ["echo 'Build complete!'"]
-
-[hooks.test]
-pre = ["echo 'Running tests...'"]
-post = []
-
-[hooks.install]
-pre = []
-post = ["echo 'Dependencies installed!'"]
-
-[hooks.clean]
-pre = []
-post = ["echo 'Cleaned up!'"]
+post = [
+    "uv tool install .",
+]
 
 [plugins]
 enabled = []
