--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ pkg = "pkg.cli:main"
 [project.entry-points."pkg.plugins"]
 # Example: my_plugin = "my_plugin:Plugin"
 
+[dependency-groups]
+dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "pytest-cov>=4.1.0"]
+
+[tool.pytest.ini_options]
+addopts = "--cov=pkg --cov-report=term-missing --cov-report=html --cov-fail-under=90"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
